--- a/html/6.html
+++ b/html/6.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ME</title>
+    <link rel="stylesheet" href="../css/css-all.css">
+
 </head>
 <body>
     <!-- 처음에 에드에서 받은 사진이랑 정보 -->
