--- a/html/index.html
+++ b/html/index.html
@@ -5,10 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>INDEX - MY SWEET MEMORY</title>
+    <link rel="stylesheet" href="../css/css-all.css">
+
 </head>
 <body>
     <div>
-        <img height="50" width="50" src="../image/115756_paper_attachment_clip_icon.png">
+        <img id="intro-leaf" height="50" width="50" src="../image/leaf clipart 15.png">
+
     </div>
     <h1>목차</h1>
 
