--- a/html/intro.html
+++ b/html/intro.html
@@ -5,22 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FOR MY MEMORY</title>
+    <link rel="stylesheet" href="../css/css-all.css">
+    <link rel="stylesheet" href="../css/css-intro.css">
 </head>
 <body>
     <div>
-        <img height="50" width="50" src="../image/115756_paper_attachment_clip_icon.png">
+        <img id="intro-leaf" height="50" width="50" src="../image/leaf clipart 15.png">
     </div>
 
-    <table border="1">
+    <table id="intro-table" border="1">
         <tr>
-            <td colspan="2">이름</td>
+            <td colspan="2">이름 : </td>
+            <td><input type="text"></td>
         </tr>
         <tr>
-            <td colspan="2">생성 날짜</td>
+            <td colspan="2">생성 날짜 : </td>
+            <td><input type="text"></td>
         </tr>
-        <tr>
-            <td><input type="button" value="add more info"></td>
-            <td><input type="submit" value="DO"> </td>
+        <tr >
+            <td rowspan="2"><div><input type="button" value="add more info"></div>
+            <div><input type="submit" value="DO"></div></td>
         </tr>
     </table>
 </body>
