--- a/html/index.html
+++ b/html/index.html
@@ -17,12 +17,12 @@
 
     <table>
         <!-- 오른쪽 정렬 -->
-        <tr><td><a href="../html/1.html">일기쓰기</td></tr>
-        <tr><td><a href="../html/2.html"></a>아이디어</td></tr>
-        <tr><td><a href="../html/3.html"></a>영화후기</td></tr>
-        <tr><td><a href="../html/4.html"></a>사진으로남기기</td></tr>
-        <tr><td><a href="../html/5.html"></a>문서로 만들기</td></tr>
-        <tr><td><a href="../html/6.html"></a>about me - 처음에 만든 에드모어 정보</td></tr>
+        <tr><td><a href="../html/1.html">일기쓰기</a></td></tr>
+        <tr><td><a href="../html/2.html">아이디어</a></td></tr>
+        <tr><td><a href="../html/3.html">영화후기</a></td></tr>
+        <tr><td><a href="../html/4.html">사진으로남기기</a></td></tr>
+        <tr><td><a href="../html/5.html">문서로 만들기</a></td></tr>
+        <tr><td><a href="../html/6.html">about me - 처음에 만든 에드모어 정보</a></td></tr>
     </table>
 </body>
 </html>
